# currency_exhange_back

./: .env-example  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: python-code-check.yml
app/: config.py  containers.py  main.py  setup.py
app/api_client/: get_currency_data.py
app/database/: database.py
app/database/tables/: currency.py
app/exceptions/: errors.py
app/repositories/: currency_repository.py
app/routers/: router.py
app/routers/v1/: currency.py
app/schemas/: currency.py  responses.py
app/services/: currency_service.py
docker/: Dockerfile  docker-compose.yml  start.sh
migrations/: env.py
migrations/versions/: 1c7eb0f4abd6_create_tables.py  2024_02_20_1956-65782d6d73e3_change_currency_table.py  2024_02_21_0507-c52200b97add_update_field_rate_in_currency.py
